# telegram-horoscope-bot

./: .gitignore  .mise.toml  Chart.yaml  Dockerfile  Makefile  README.md  horoscopebot.py  pyproject.toml  renovate.json  requirements.txt  values.yaml
.github/workflows/: workflow.yml
chart/: values.yaml
chart/templates/: db-config.yaml  secrets.yaml  telegram_config.yaml  update-handler.yaml  update_handler.yaml
horoscopebot/: __main__.py  bot.py  config.py  rate_limit.py
horoscopebot/horoscope/: openai.py  steffen.py
migrations/: Dockerfile  flyway.conf
migrations/sql/: V2__Legacy.sql  V3__Initial.sql  V4__Transfer.sql  V5__debug.sql  V6__Remove_debug.sql  V7__Response_Id.sql
src/horoscopebot/: __main__.py  bot.py  config.py  dementia_responder.py  rate_limit.py  rate_limit_policy.py  telemetry.py  tracing.py
src/horoscopebot/event/: publisher.py  pubsub.py  stub.py
src/horoscopebot/horoscope/: horoscope.py  openai.py  openai_chat.py  steffen.py  weekly_openai.py
src/horoscopebot/rate_limit/: __init__.py
src/horoscopebot/rate_limit/policy/: __init__.py  daily_limit.py
src/horoscopebot/rate_limit/repo/: __init__.py  in_memory.py  sqlite.py
src/tests/: test_dementia_responder.py
src/tests/horoscopebot/: test_dementia_responder.py
src/tests/horoscopebot/rate_limit/: conftest.py
src/tests/horoscopebot/rate_limit/policy/daily_limit/: conftest.py  test_general_daily_limit.py  test_multi_use_daily_limit.py  test_single_use_daily_limit.py
templates/: gcp_config.yaml  secrets.yaml  telegram_config.yaml  update_handler.yaml
terraform/: .terraform.lock.hcl  iam.tf  providers.tf  topics.tf
