[project]
requires-python = "==3.12.*"

[tool.poetry]
name = "horoscopebot"
description = "Tells lies"
version = "1.0.0"
authors = ["OpenAlcoholics <team@openalcoholics.group>"]
license = "MIT"

[[tool.poetry.source]]
name = "internal"
url = "https://pypi.bjoernpetersen.net"
priority = "explicit"

[tool.poetry.dependencies]
bs-config = { version = "1.0.2", extras = ["dotenv"], source = "internal" }
certifi = "2024.8.30"
Deprecated = "^1.2.13"
google-cloud-pubsub = "^2.0.0"
httpx = "^0.27.0"
openai = "^1.0.0"
opentelemetry-api = "~1.27"
opentelemetry-sdk = "~1.27"
opentelemetry-exporter-otlp-proto-grpc = "~1.27"
opentelemetry-instrumentation-httpx = "*"
opentelemetry-instrumentation-logging = "*"
python = "~3.12"
prep-rate-limiter = { version = "5.0.5", extras = ["postgres", "opentelemetry-postgres"], source = "internal" }
sentry-sdk = "^2.0.0"
tzdata = "2024.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
pytest = "^8.0.0"
ruff = "0.6.8"
types-Deprecated = "^1.2.9"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.isort]
known-first-party = ["horoscopebot"]
