[project]
requires-python = "==3.13.*"
name = "horoscopebot"
description = "Tells lies"
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config[dotenv] ==1.1.1",
    "Deprecated >=1.0.0, <2.0.0",
    "httpx ==0.28.*",
    "openai ==1.97.*",
    "opentelemetry-api ==1.35.*",
    "opentelemetry-sdk ==1.35.*",
    "opentelemetry-exporter-otlp-proto-grpc ==1.35.*",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
    "prep-rate-limiter[postgres,opentelemetry-postgres] ==8.0.0",
    "python-telegram-bot ==22.2",
    "sentry-sdk >=2.0.0, <3.0.0",
    "tzdata ==2025.2",
    "uvloop ==0.21.*",
]

[dependency-groups]
dev = [
    "mypy ==1.17.*",
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.12.4",
    "types-Deprecated >=1.0.0, <2.0.0",
    "types-requests >=2.28.11, <3.0.0",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
prep-rate-limiter = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
namespace_packages = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
